# Alpha-SDK

./: .dockerignore  .gitignore  ALPHA.md  CLAUDE.md  FLOW.md  pyproject.toml  quack  quack-next.py  quack-probe.py  quack-sysprompt-probe.py  test_client.py
.github/workflows/: publish.yml
simple/: index.html
simple/alpha-sdk/: alpha_sdk-0.5.3-py3-none-any.whl  alpha_sdk-0.6.0-py3-none-any.whl  alpha_sdk-1.0.0a1-py3-none-any.whl  alpha_sdk-1.0.0a2-py3-none-any.whl  alpha_sdk-1.0.0a3-py3-none-any.whl  alpha_sdk-1.0.0a4-py3-none-any.whl  alpha_sdk-1.0.0a5-py3-none-any.whl  alpha_sdk-1.0.0a6-py3-none-any.whl  index.html
src/alpha_sdk/: __init__.py  archive.py  broadcast.py  claude.py  client.py  compact_proxy.py  engine.py  observability.py  preprocessing.py  proxy.py  queue.py  replay.py  router.py  session.py  system_prompt.py
src/alpha_sdk/agents/: Librarian.md  Memno.md  __init__.py
src/alpha_sdk/cli/: cortex.py
src/alpha_sdk/memories/: __init__.py  cortex.py  db.py  embeddings.py  images.py  recall.py  suggest.py  vision.py
src/alpha_sdk/producers/: __init__.py  human.py
src/alpha_sdk/system_prompt/: __init__.py  assemble.py  calendar.py  capsules.py  context.py  here.py  soul.py  todos.py
src/alpha_sdk/tools/: __init__.py  cortex.py  fetch.py  forge.py  handoff.py
tests/: compact_arg_test.py  compact_stress_test.py  compact_test.py  conftest.py  probe_compact.py  test_claude.py  test_claude_integration.py  test_client.py  test_compact_integration.py  test_engine.py  test_engine_integration.py  test_human_producer.py  test_mcp_dispatch.py  test_proxy.py  test_proxy_forwarding.py  test_queue.py  test_replay.py  test_router.py  test_session.py  test_smoke.py  test_system_prompt.py
tests/captures/: .gitignore
tests/fixtures/jnsq/: expected_full.txt  expected_no_bill.txt  expected_no_here.txt
tests/golden/: alpha_api_request_reference.json
(+2 files in other folders)
