[project]
name = "alpha_sdk"
version = "1.0.0a3"
description = "The plain SDK — engine, session, producers, observers"
requires-python = ">=3.11"
dependencies = [
    # Phase 0: minimal. Add dependencies as phases require them.
    "pendulum>=3.0.0",
    # Phase 1.5: HTTP proxy for compact rewriting + token counting
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    # The claude runtime. Bundles the native CLI binary.
    # Pinned exact — we upgrade intentionally, not by accident.
    "claude-agent-sdk==0.1.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alpha_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that need live claude process or database",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
]
